# sandbox.watch

./: .gitignore  AGENTS.md  README.md  launch.py  providers.json  pyproject.toml
box/: agent.sh  bootstrap.py  changelog.py  config.py  parallel_client.py  providers.py  server.py  turn.py
box/prompts/: discovery_prompt.md  update_prompt.md
data/: changelog.jsonl  monitors.json
data/providers/: aws-agentcore-code-interpreter.json  aws-lambda-microvms.json  beam.json  blaxel.json  box-by-ascii.json  cloudflare.json  codesandbox.json  daytona.json  deno-sandbox.json  e2b.json  exe-dev.json  fly-io-sprites.json  fly.json  gke-agent-sandbox.json  langsmith-sandboxes.json  microsoft-azure.json  modal.json  morph.json  novita.json  opencomputer.json  railway.json  runloop.json  runwork.json  sailboxes.json  scrapybara.json  vercel.json
site/static/: style.css
site/templates/: about.html  base.html  index.html  log.html  provider.html
